# Nbed

./: .gitignore  .pre-commit-config.yaml  .problem_solving.ipynb  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CO2_Alexis.ipynb  H2 --- H2 Updated Attempt!.ipynb  NEW-Copy1.ipynb  NEW.ipynb  Notes for method.ipynb  Pycharm_import.ipynb  README.md  Untitled.ipynb  WF-in-DFT-CO2.ipynb  hydronium.ipynb  pfas.ipynb  pyproject.toml  pyscf_custom_obj_updated.py  testing_updated_tools.ipynb
.github/: dependabot.yml  pull_request.yaml
.github copy/workflows/: pull_request.yaml  release.yaml
.github/workflows/: actions.yaml  build.yaml  lint.yaml  linting.yaml  publish.yaml  pull_request.yaml  push_to_master.yaml  release.yaml  test-publish.yaml  test.yaml  testing.yaml
docs/: pyproject.toml
docs/notebooks/: 1. Orbital Plotting and Localization Functions.ipynb  2. Advanced Usage.ipynb  2. Orbital Localization Functions.ipynb  3. embed - simple usage (generate embedded qubit H).ipynb  4. embed - advanced usage .ipynb  5. results.ipynb  6. Long form Notes.ipynb  7. vqe-in-dft.ipynb  A Scalable Approach to Quantum Simulation via Projection-based Embedding.ipynb  Orbital Localization Theory.ipynb  PFAS-tom.ipynb  Utilities.ipynb  Virtual Valence Orbitals.ipynb  active_OH_stretch_results_SPADE.csv  hydronium.ipynb  nonactive_OH_stretch_results_SPADE.csv  pfas.ipynb  results.ipynb  test_config.json  upgrade.ipynb  water.xyz
docs/source/: builder.rst  conf.py  config.md  config.rst  converter.rst  driver.md  driver.rst  embed.md  embed.rst  examples.md  ham_builder.md  index.md  index.rst  localizers.md  localizers.rst  modules.rst  nbed.localizers.rst  nbed.rst  nbed.scf.rst  publications.md  scf.md  scf.rst  utils.md  utils.rst
docs_source/: index.rst  nbed.rst  nbed.scf.rst
nbed/: __init__.py  ace.py  config.py  driver.py  embed.py  exceptions.py  ham_builder.py  ham_converter.py  localisation.py  mol_plot.py  types.py  utils.py
nbed/localizers/: __init__.py  ace.py  base.py  pyscf.py  spade.py  system.py
nbed/scf/: __init__.py  embedded_hcore_funcs.py  huzinaga_hf.py  huzinaga_ks.py  huzinaga_rhf.py  huzinaga_rks.py  huzinaga_scf.py  huzinaga_uks.py
notebooks/: 1. Plotting Molecule and Orbitals.ipynb  2. Orbital Localization Functions.ipynb  3. embed.ipynb  4. results.ipynb  5. Long form Notes.ipynb  6. Water_example.ipynb  Checking_orb_localization.ipynb  Class Notes.ipynb  Embedded_Localizing_work.ipynb  Full Notes- HF version.ipynb  Full Notes.ipynb  Function_methods.ipynb  Function_methods_long.ipynb  Function_methods_short.ipynb  Huzinaga_and_mu_clean.ipynb  Huzinaga_working_scrappy_notes!.ipynb  LOCALIZED_orbs.molden  Localizing notes WORKING- Phys_notes.ipynb  Localizing notes WORKING.ipynb  Localizing_notes-Copy1.ipynb  Localizing_notes.ipynb  PM_LOCALIZED_orbs.molden  QSOME_manual!.ipynb  TEST!-Copy1.ipynb  TEST!.ipynb  Updated_Methods.ipynb  Updated_Methods_copy1_failing.ipynb  Updated_method.ipynb  open-shells.ipynb  taperingstuff.ipynb  temp-checking emb h.ipynb  updating Huzinaga every iteration-Copy1.ipynb  updating Huzinaga every iteration.ipynb  vqe-in-dft.ipynb
notebooks/OLD_notebooks/: H2 --- H2 Updated Attempt!.ipynb  PsiEmbed_Manual.ipynb  QSome Analysis.ipynb  VQE-in-DFT NOTES_ON_METHOD.ipynb  VQE-in-DFT.ipynb  testing_updated_tools.ipynb
projects/H2O/: H2O example.ipynb  H2O_exp.ipynb
projects/H4_molecule/: H4_experiment.ipynb  H4_experiment_PIPEK_nactive_3.ipynb  H4_experiment_spade_nactive_1.ipynb  H4_experiment_spade_nactive_2.ipynb  H4_experiment_spade_nactive_3.ipynb  H4_strong_corr.ipynb  generate_H4_molecules.py
results/: ammonia_pipek-mezey.json  ammonia_spade.json  carbon_dioxide_pipek-mezey.json  carbon_dioxide_spade.json  diazene_pipek-mezey.json  diazene_spade.json  ethene_pipek-mezey.json  ethene_spade.json  ethine_pipek-mezey.json  ethine_spade.json  methane_pipek-mezey.json  methane_spade.json  nitrogen_pipek-mezey.json  nitrogen_spade.json  oxygen_pipek-mezey.json  oxygen_spade.json  water_pipek-mezey.json  water_spade.json
results_ccsd/: ammonia.out  azomethane.out  carbon_dioxide.out  carbon_monoxide.out  cyclohexane.out  cyclopropane.out  diazene.out  ethane.out  ethene.out  ethine.out  formaldehyde.out  glucose.out  glycine.out  h4.out  h8chain.out  hydrogen_cloride.out  methane.out  nitrogen.out  oxygen.out  pyridine.out  water.out
source/: conf.py
tests/: H2.xyz  conftest.py  open_shell.ipynb  test.qham  test_builder.py  test_config.json  test_config.yaml  test_driver.py  test_embed.py  test_ham_converter.py  test_localizers.py  test_scf.py  test_utils.py
tests/hamiltonians/: model_data.json  (+14 more)
vqe-in-dft/: pyscf_custom_obj_updated.py  pyscf_functions.py  run_embedding.py  vqe_in_dft.py
vqe_in_dft/: __init__.py  embed.py  ham_converter.py  localisation.py  mol_plot.py  mres.py  pyscf_custom_NEW.py  qubit_hamiltonian.py  run_embedding.py  temp_notebook.py  test_vqe.ipynb  utils.py  vqe-in-dft copy.ipynb  vqe-in-dft.ipynb  wf-in-dft.ipynb
(+125 files in other folders)
