[tool.poetry]
name = "nbed"
version = "0.0.7"
description = ""
authors = [
    "Michael Williams de la Bastida <michael.williams.20@ucl.ac.uk>",
    "Alexis Ralli <alexis.ralli.18@ucl.ac.uk>"
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
openfermion = "^1.1.0"
PennyLane = "^0.33.0"
PyYAML = "^6.0.0"
types-PyYAML = "^5.4.11"
qiskit-nature = "^0.7.0"
cached-property = "^1.5.2"
py3Dmol = "^1.7.0"
jupyter = "^1.0.0"
h5py = "^3.7"
symmer = "~0.0.7"
pyscf = "^2.3.0"
grpcio = "^1.59.0"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = ">=4.0.0, <5"
pydocstyle = "^6.1.1"
pytest = "^7.2.2"
mypy = "^0.902"
bpython = "^0.21"
isort = "^5.9.3"
pandoc = "^2.3"
poetry = "^1.7.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
nbsphinx = "^0.9.0"
Sphinx = "^5"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nbed = "nbed.embed:cli"

# Ignore pytest warnings here
[tool.pytest.ini_options]
filterwarnings = [
    #H5py throws a custom deprecation warning about default file mode
    'ignore:.*Using default_file_mode.*instead:UserWarning',
    # Lots of downstream deprecation warnings
    'ignore::DeprecationWarning'
]

[tool.ruff]
exclude = ["notebooks/", "docs/", "tests/"]
line-length = 88
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "D", #pydocstyle (lets add this when we actually write docstrings)
    "I", #isort
]
