[project]
name = "nbed"
version = "0.0.7"
description = "Projection-based embedding methods for reducing quantum simulation resource requirements."
authors = [
    {name= "Michael Williams de la Bastida", email= "michael.williams.20@ucl.ac.uk"},
    {name= "Alexis Ralli",  email= "alexis.ralli.18@ucl.ac.uk"}
]
requires-python = ">=3.9, <3.13"
dependencies = [
    "openfermion (>=1.1.0, <2.0.0)",
    "PennyLane (>=0.36.0, <1.0.0)",
    "PyYAML (>=6.0.0, <7.0.0)",
    "qiskit-nature (>=0.7.0,<1.0.0)",
    "symmer (>=0.0.7, <1.0.0)",
    "pyscf (>=2.3.0, <3.0.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
jupyter = "^1.0.0"
pytest = "^7.4.2"
pandoc = "^2.3"
poetry = "^1.7.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
nbsphinx = "^0.9.0"
Sphinx = ">5"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
nbed = "nbed.embed:cli"

# Ignore pytest warnings here
[tool.pytest.ini_options]
filterwarnings = [
    #H5py throws a custom deprecation warning about default file mode
    'ignore:.*Using default_file_mode.*instead:UserWarning',
    # Lots of downstream deprecation warnings
    'ignore::DeprecationWarning'
]

[tool.ruff]
exclude = ["notebooks/", "docs/", "tests/"]
line-length = 88
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "D", #pydocstyle (lets add this when we actually write docstrings)
    "I", #isort
]
