[project]
name = "nbed"
version = "0.0.8"
description = "Projection-based embedding methods for reducing quantum simulation resource requirements."
authors = [
    { name = "Michael Williams de la Bastida", email = "michael.williams.20@ucl.ac.uk" },
    { name = "Alexis Ralli", email = "alexis.ralli.18@ucl.ac.uk" },
]
requires-python = ">=3.11, <4"
dependencies = [
    "openfermion (>=1.1.0, <2.0.0)",
    "PyYAML (>=6.0.0, <7.0.0)",
    "qiskit-nature (>=0.7.0,<1.0.0)",
    "symmer (>=0.0.7, <1.0.0)",
    "pyscf (>=2.3.0, <3.0.0)",
    "numpy (>2.0.0, <3.0.0)",
    "pydantic>=2.11.7",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
nbed = "nbed.embed:cli"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1,<5",
    "jupyter>=1.0.0,<2",
    "pytest>=7.4.2, <9",
    "poetry>=2.0.0,<3",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.8,<1",
    "py3dmol>=2.4.2,<3",
]
docs = [
    "nbsphinx>=0.9.0,<0.10",
    "Sphinx>=5.0.0, <9",
    "sphinx-rtd-theme>=2.0.0,<4",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    #H5py throws a custom deprecation warning about default file mode
    'ignore:.*Using default_file_mode.*instead:UserWarning',
    # Lots of downstream deprecation warnings
    'ignore::DeprecationWarning'
]
addopts="--show-capture=stderr"
testpaths = ["tests"]

[tool.ruff]
exclude = ["notebooks/", "docs/", "tests/"]
line-length = 88
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "D", #pydocstyle
    "I", #isort
]
